style of book rows updated

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@
 }
 
 .book-row {
-  margin-top: 2px;
-  margin-bottom: 2px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom-color: rgb(63,81,181);
+  border-bottom-style: solid;
+  border-bottom-width: thin;
 }
