--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,29 @@
   border-bottom-style: solid;
   border-bottom-width: thin;
 }
+
+/* Loading Component */
+.loading-indicator {
+    display: block;
+    width: 70px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 40%;
+    z-index: 100;
+    background-color: rgb(250,250,250);
+}
+
+.loading-indicator img {
+    width: 70px;
+    background-color: rgb(250,250,250);
+}
+
+h1, .mobile-col-header {
+  color: rgb(63,81,181);
+}
+
+h1 {
+  text-align: center;
+}
