--- a/src/books/templates/books.template.html
+++ b/src/books/templates/books.template.html
@@ -1,12 +1,13 @@
-<div layout="row">
-  <md-input-container flex class="md-icon-float md-block">
+<div layout-gt-sm="row" layout="column">
+  <md-input-container flex-gt-sm class="md-icon-float md-block">
       <label>Αναζήτηση</label>
       <md-icon md-font-icon="fa fa-search"></md-icon>
       <input id="search-input" ng-model="search"  ng-change="filterCartoList(search)" my-enter="filterCartoList(search)">
   </md-input-container>
 
-  <md-input-container flex="40">
+  <md-input-container flex-gt-sm="40">
     <label>Ταξινόμηση</label>
+    <md-icon md-font-icon="fa fa-filter"></md-icon>
     <md-select ng-change="booksCtrl.updateSelect()" name="sort" ng-model="booksCtrl.sort">
       <md-option value="number" selected>&uarr; Ημερομηνία Καταχώρησης</md-option>
       <md-option value="-number">&darr; Ημερομηνία Καταχώρησης</md-option>
@@ -16,17 +17,22 @@
   </md-input-container>
 </div>
 
-<div layout="row" class="title-header">
-  <span flex>Τίτλος Βιβλίου</span>
-  <span flex="30">Συγγραφέας</span>
-  <span flex="15">Ημερομηνία Έκδοσης</span>
-  <span flex="15">Αριθμός Σελίδων</span>
+<div layout-gt-sm="row" class="title-header" hide-xs hide-sm>
+  <span flex-gt-sm>Τίτλος Βιβλίου</span>
+  <span flex-gt-sm="30">Συγγραφέας</span>
+  <span flex-gt-sm="15">Ημερομηνία Έκδοσης</span>
+  <span flex-gt-sm="15">Αριθμός Σελίδων</span>
 </div>
-<div class="book-row" layout="row" ng-repeat="book in booksCtrl.books | filter : search | orderBy : booksCtrl.sort">
+
+<div class="book-row" layout-gt-sm="row" layout="column" ng-repeat="book in booksCtrl.books | filter : search | orderBy : booksCtrl.sort">
   <div flex>{{ book.title }}</div>
-  <div flex="30">{{ book.author }}</div>
-  <div flex="15">{{ book.publishAge }}</div>
-  <div flex="15">{{ book.pages }}</div>
+  <div flex-gt-sm="30">{{ book.author }}</div>
+  <div flex-gt-sm="15">
+    <div  ng-if="book.publishAge">
+      {{ book.publishAge }} <span hide-gt-sm class="mobile-col-header">Έτος Έκδοσης</span>
+    </div>
+  </div>
+  <div flex-gt-sm="15">{{ book.pages }} <span hide-gt-sm class="mobile-col-header">Σελίδες</span></div>
 </div>
 
 <footer>
