--- a/src/books/templates/books.template.html
+++ b/src/books/templates/books.template.html
@@ -1,39 +1,41 @@
-<div layout-gt-sm="row" layout="column">
-  <md-input-container flex-gt-sm class="md-icon-float md-block">
-      <label>Αναζήτηση</label>
-      <md-icon md-font-icon="fa fa-search"></md-icon>
-      <input id="search-input" ng-model="search"  ng-change="filterCartoList(search)" my-enter="filterCartoList(search)">
-  </md-input-container>
+<md-content layout-padding>
+  <div layout-gt-sm="row" layout="column">
+    <md-input-container flex-gt-sm class="md-icon-float md-block">
+        <label>Αναζήτηση</label>
+        <md-icon md-font-icon="fa fa-search"></md-icon>
+        <input id="search-input" ng-model="search"  ng-change="filterCartoList(search)" my-enter="filterCartoList(search)">
+    </md-input-container>
 
-  <md-input-container flex-gt-sm="40">
-    <label>Ταξινόμηση</label>
-    <md-icon md-font-icon="fa fa-filter"></md-icon>
-    <md-select ng-change="booksCtrl.updateSelect()" name="sort" ng-model="booksCtrl.sort">
-      <md-option value="number" selected>&uarr; Ημερομηνία Καταχώρησης</md-option>
-      <md-option value="-number">&darr; Ημερομηνία Καταχώρησης</md-option>
-      <md-option value="authorSurname">&uarr; Όνομα Συγγραφέα</md-option>
-      <md-option value="-authorSurname">&darr; Όνομα Συγγραφέα</md-option>
-    </md-select>
-  </md-input-container>
-</div>
-
-<div layout-gt-sm="row" class="title-header" hide-xs hide-sm>
-  <span flex-gt-sm>Τίτλος Βιβλίου</span>
-  <span flex-gt-sm="30">Συγγραφέας</span>
-  <span flex-gt-sm="15">Ημερομηνία Έκδοσης</span>
-  <span flex-gt-sm="15">Αριθμός Σελίδων</span>
-</div>
-
-<div class="book-row" layout-gt-sm="row" layout="column" ng-repeat="book in booksCtrl.books | filter : search | orderBy : booksCtrl.sort">
-  <div flex>{{ book.title }}</div>
-  <div flex-gt-sm="30">{{ book.author }}</div>
-  <div flex-gt-sm="15">
-    <div  ng-if="book.publishAge">
-      {{ book.publishAge }} <span hide-gt-sm class="mobile-col-header">Έτος Έκδοσης</span>
-    </div>
+    <md-input-container flex-gt-sm="45" flex-offset-gt-sm="10">
+      <label>Ταξινόμηση</label>
+      <md-icon md-font-icon="fa fa-filter"></md-icon>
+      <md-select ng-change="booksCtrl.updateSelect()" name="sort" ng-model="booksCtrl.sort">
+        <md-option value="number" selected>&uarr; Ημερομηνία Καταχώρησης</md-option>
+        <md-option value="-number">&darr; Ημερομηνία Καταχώρησης</md-option>
+        <md-option value="authorSurname">&uarr; Όνομα Συγγραφέα</md-option>
+        <md-option value="-authorSurname">&darr; Όνομα Συγγραφέα</md-option>
+      </md-select>
+    </md-input-container>
   </div>
-  <div flex-gt-sm="15">{{ book.pages }} <span hide-gt-sm class="mobile-col-header">Σελίδες</span></div>
-</div>
+
+  <div layout-gt-sm="row" class="title-header" hide-xs hide-sm>
+    <span flex-gt-sm>Τίτλος Βιβλίου</span>
+    <span flex-gt-sm="30">Συγγραφέας</span>
+    <span flex-gt-sm="15">Ημερομηνία Έκδοσης</span>
+    <span flex-gt-sm="15">Αριθμός Σελίδων</span>
+  </div>
+
+  <div class="book-row" layout-gt-sm="row" layout="column" ng-repeat="book in booksCtrl.books | filter : search | orderBy : booksCtrl.sort">
+    <div flex>{{ book.title }}</div>
+    <div flex-gt-sm="30">{{ book.author }}</div>
+    <div flex-gt-sm="15">
+      <div  ng-if="book.publishAge">
+        {{ book.publishAge }} <span hide-gt-sm class="mobile-col-header">Έτος Έκδοσης</span>
+      </div>
+    </div>
+    <div flex-gt-sm="15">{{ book.pages }} <span hide-gt-sm class="mobile-col-header">Σελίδες</span></div>
+  </div>
+</md-content>
 
 <footer>
   <div class="row footer">
