updated date filter

--- a/src/books/templates/books.template.html
+++ b/src/books/templates/books.template.html
@@ -39,6 +39,6 @@
 
 <footer>
   <div class="row footer">
-    Τελευταία ενημέρωση: {{ booksCtrl.updatedAt }}
+    Τελευταία ενημέρωση: {{ booksCtrl.updatedAt | date:'yyyy-MM-dd HH:mm:ss Z'}}
   </div>
 </footer>
